--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -37,12 +37,11 @@
 .nav-links {
   color: #fff;
   text-decoration: none;
-  padding: 00.5rem 1rem;
+  padding: 27px 1rem;
 }
 
 .nav-links:hover {
   background-color: #6d76f7;
-  border-radius: 4px;
   transition: all 0.2s ease-out;
 }
 
